--- a/index.html
+++ b/index.html
@@ -5,6 +5,67 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Oswald" rel="stylesheet">
 		<link rel="icon" type="image/png" href="favicon.ico"/>
+		<!-- PREFETCH-->
+		<link rel="prefetch" href="images\signatures\52.png">
+		<link rel="prefetch" href="images\signatures\51.png">
+		<link rel="prefetch" href="images\signatures\50.png">
+		<link rel="prefetch" href="images\signatures\49.png">
+		<link rel="prefetch" href="images\signatures\48-2.png">
+		<link rel="prefetch" href="images\signatures\48.png">
+		<link rel="prefetch" href="images\signatures\47.png">
+		<link rel="prefetch" href="images\signatures\46.png">
+		<link rel="prefetch" href="images\signatures\45.png">
+		<link rel="prefetch" href="images\signatures\44.png">
+		<link rel="prefetch" href="images\signatures\43.png">
+		<link rel="prefetch" href="images\signatures\42.png">
+		<link rel="prefetch" href="images\signatures\41.png">
+		<link rel="prefetch" href="images\signatures\40.png">
+		<link rel="prefetch" href="images\signatures\39.png">
+		<link rel="prefetch" href="images\signatures\38-2.png">
+		<link rel="prefetch" href="images\signatures\38.png">
+		<link rel="prefetch" href="images\signatures\37-2.png">
+		<link rel="prefetch" href="images\signatures\37.png">
+		<link rel="prefetch" href="images\signatures\36.png">
+		<link rel="prefetch" href="images\signatures\35.png">
+		<link rel="prefetch" href="images\signatures\34.png">
+		<link rel="prefetch" href="images\signatures\33.png">
+		<link rel="prefetch" href="images\signatures\32.png">
+		<link rel="prefetch" href="images\signatures\31.png">
+		<link rel="prefetch" href="images\signatures\30.png">
+		<link rel="prefetch" href="images\signatures\29.png">
+		<link rel="prefetch" href="images\signatures\28.png">
+		<link rel="prefetch" href="images\signatures\27.png">
+		<link rel="prefetch" href="images\signatures\26.png">
+		<link rel="prefetch" href="images\signatures\25.png">
+		<link rel="prefetch" href="images\signatures\24.png">
+		<link rel="prefetch" href="images\signatures\23.png">
+		<link rel="prefetch" href="images\signatures\22.png">
+		<link rel="prefetch" href="images\signatures\21.png">
+		<link rel="prefetch" href="images\signatures\20.png">
+		<link rel="prefetch" href="images\signatures\19.png">
+		<link rel="prefetch" href="images\signatures\18-2.png">
+		<link rel="prefetch" href="images\signatures\18.png">
+		<link rel="prefetch" href="images\signatures\17.png">
+		<link rel="prefetch" href="images\signatures\16.png">
+		<link rel="prefetch" href="images\signatures\15.png">
+		<link rel="prefetch" href="images\signatures\14.png">
+		<link rel="prefetch" href="images\signatures\13.png">
+		<link rel="prefetch" href="images\signatures\12.png">
+		<link rel="prefetch" href="images\signatures\11-2.png">
+		<link rel="prefetch" href="images\signatures\11.png">
+		<link rel="prefetch" href="images\signatures\10.png">
+		<link rel="prefetch" href="images\signatures\9.png">
+		<link rel="prefetch" href="images\signatures\8.png">
+		<link rel="prefetch" href="images\signatures\7.png">
+		<link rel="prefetch" href="images\signatures\6.png">
+		<link rel="prefetch" href="images\signatures\5.png">
+		<link rel="prefetch" href="images\signatures\4.png">
+		<link rel="prefetch" href="images\signatures\3.png">
+		<link rel="prefetch" href="images\signatures\2-2.png">
+		<link rel="prefetch" href="images\signatures\2.png">
+		<link rel="prefetch" href="images\signatures\1-2.png">
+		<link rel="prefetch" href="images\signatures\1.png">
+		<!-- -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
