--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Oswald" rel="stylesheet">
 		<link rel="icon" type="image/png" href="favicon.ico"/>
 		<!-- PREFETCH-->
+		<link rel="prefetch" href="images\other\hoover.png">
+		<link rel="prefetch" href="images\other\jumplogosmall.png">
+		<link rel="prefetch" href="images\other\summersound1.png">
+		<link rel="prefetch" href="images\other\summersound2.png">
+		<link rel="prefetch" href="images\logos\flamelogo.png">
+		<link rel="prefetch" href="images\logos\jlogo.png">
+		<link rel="prefetch" href="images\logos\jumplogo.png">
+		<link rel="prefetch" href="images\wallpapers\tracerpolygonwallpaper.png">
 		<link rel="prefetch" href="images\signatures\52.png">
 		<link rel="prefetch" href="images\signatures\51.png">
 		<link rel="prefetch" href="images\signatures\50.png">
