--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		</ul>
 		<!-- CONTENT-->
 		<div class="title">
-			<h1>Marinoitu's Gallery</h1>
+			<h1>Marinoitu's Gallery TEST LOL XD</h1>
 			<h2><i>Visual Design & Artwork</i></h2>
 		</div>
 		<!-- FOOTER-->
