--- a/index.html
+++ b/index.html
@@ -75,8 +75,32 @@
 		<link rel="prefetch" href="images\signatures\1.png">
 		<!-- -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+				<meta charset='UTF-8'>
+		
+		<style>
+		.no-js #loader { display: none;  }
+		.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+	</style>
+	
+	
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+	
+	
+	<script src="https://github.com/Modernizr/Modernizr/raw/master/modernizr.js"></script>
+	<script>
+		// Wait for window load
+		$(window).load(function() {
+			// Animate loader off screen
+			$("#loader").animate({
+				top: -200
+			}, 1500);
+		});
+	</script>
+		
 	</head>
 	<body>
+		<div class="se-pre-con"></div>
 		<!-- MENU-->
 		<ul>
 			<a href="index.html"><img id="logo" src="images\flamelogo1.png" alt="Logo" style="height:54px;width:54px;" /></a>
